updates to local config

--- a/git.config
+++ b/git.config
@@ -1,12 +1,20 @@
-#!/bin/bash
-user.name=CTallquist
-alias.cb=branch --show-current
-alias.rename=branch -m
-alias.co=checkout
-alias.cm=checkout main
-alias.new=checkout -b
-alias.delete=branch -D
-alias.yoink=pull
-alias.yeet=push
-alias.explode=reset --hard
-push.default=current
+[user]
+    name = ctallquist
+[alias]
+    cb=branch --show-current
+    rename=branch -m
+    co=checkout
+    cm=checkout main
+    new=checkout -b
+    delete=branch -D
+    yoink=pull
+    yeet=push
+    explode=reset --hard
+    pf=push --force
+    rb=rebase --exec 'git commit --amend --no-edit -n -S' -i
+[push]
+    default=current
+[init]
+    defaultBranch=main
+[gpg]
+    format=ssh
